--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,6 @@ services:
       dockerfile: Dockerfile
     volumes:
      - ./:/usr/src/app
-    command: sh -c "cd app && yarn start"
+    command: sh -c "cd app && npm run dev"
     ports:
      - "3000:3000"
